test/deprecated/io/iomodeCheck.good
iomodeCheck.chpl:1: error: iomode is no longer available by default, please insert
a use of the IO module to access it.
