test/deprecated/io/iomodeCheck.chpl
var x = iomode.r;
writeln(x);
